--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,5 @@
 # Xcode
+
 # Build, test, and archive an Xcode workspace on macOS.
 # Add steps that install certificates, test, sign, and distribute an app, save build artifacts, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/xcode
@@ -13,8 +14,9 @@ steps:
 - task: Xcode@5
   inputs:
     actions: 'build'
-    scheme: ''
-    sdk: 'iphoneos'
-    configuration: 'Release'
-    xcWorkspacePath: '**/*.xcodeproj/project.xcworkspace'
-    xcodeVersion: '15' # Options: 11, 12, 13, 14, 15, default, specifyPath
+    packageApp: true
+    signingOption: 'auto'
+    teamId: '6C87FG2Z2Z'
+    destinationPlatformOption: 'iOS'
+    destinationTypeOption: 'devices'
+    destinationDevices: 'Maxeyiphone'
